# digital_twin_lab_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXPLANATION.md  LICENSE  Makefile  README.md  SECURITY.md  _config.yml  docker-compose.yml  index.md  main.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
.obsidian/: workspace.json
apps/: __init__.py  py.typed
apps/analysis/: __init__.py  reporter.py  visualization.py
apps/backend/: Dockerfile  README.md  __init__.py
apps/backend/api/: __init__.py  app.py  router.py
apps/backend/cli/: __main__.py  check_deps.py  main.py
apps/backend/core/: __init__.py
apps/backend/core/analysis/: reporter.py  visualization.py
apps/backend/core/bayesian/: __init__.py  bridge_sampling.py  calibration.py  hyperparameter_optimization.py  model_selection.py  normalization.py
apps/backend/core/data/: synthetic_generator.py
apps/backend/core/fem/: beam_fem.py
apps/backend/core/models/: base_beam.py  euler_bernoulli.py  timoshenko.py
apps/backend/core/pipeline/: orchestrator.py
apps/backend/core/utils/: __init__.py  config.py  logging_setup.py
apps/backend/schemas/: __init__.py  simulation.py
apps/backend/services/: __init__.py  simulation.py
apps/bayesian/: __init__.py  bridge_sampling.py  calibration.py  hyperparameter_optimization.py  model_selection.py  normalization.py
apps/data/: __init__.py  synthetic_generator.py
apps/fem/: __init__.py  beam_fem.py  cantilever_fem.py
apps/frontend/: Dockerfile  README.md  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/models/: types.ts
apps/frontend/src/viewmodels/: useSimulationViewModel.test.ts  useSimulationViewModel.ts
apps/frontend/src/views/: Dashboard.css  Dashboard.test.tsx  Dashboard.tsx
apps/models/: __init__.py  base_beam.py  euler_bernoulli.py  timoshenko.py
apps/pipeline/: __init__.py  orchestrator.py
apps/utils/: config.py  logging_setup.py
configs/: default_config.yaml
docs/: API.md  ARCHITECTURE.md  After meeting 04_02_2026.md  BAYESIAN_GLOSSARY.md  CHANGELOG.md  DEVELOPMENT.md  EXPLANATION.md  GETTING_STARTED.md  INDEX.md  PRESENTATION_GUIDE.md  Parameters.md  README.md  api-reference.md  architecture.md  bayesian-glossary.md  development-guide.md  getting-started.md  parameters.md  technical-spec.md
docs/internal/: BAYESIAN_AUDIT_ANALYSIS.md  IMPLEMENTATION_PLAN.md
examples/: detailed_analysis.py  parameter_analysis.py  quick_demo.py
tests/: conftest.py  test_bayesian.py  test_beam_models.py  test_bridge_sampling.py  test_config.py  test_fem.py  test_model_selection.py  test_normalization.py  test_orchestrator.py  test_reporter.py  test_synthetic_generator.py
