[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-beam-model-selection"
version = "0.1.0"
description = "Bayesian Model Selection for Beam Theory in Structural Health Monitoring Digital Twins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"},
    {name = "Maksim Feldmann", email = "maksim.feldman@rwth-aachen.de"}
]
maintainers = [
    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"}
]
keywords = [
    "digital-twins",
    "structural-health-monitoring",
    "bayesian-inference",
    "beam-theory",
    "euler-bernoulli",
    "timoshenko",
    "finite-element-method"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "pytensor>=2.18.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "h5py>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pygments>=2.15.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
beam-model-selection = "apps.main:main"

[project.urls]
Homepage = "https://github.com/sheydHD/digital_twin_lab_project"
Documentation = "https://github.com/sheydHD/digital_twin_lab_project#readme"
Repository = "https://github.com/sheydHD/digital_twin_lab_project"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "configs*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=apps --cov-report=term-missing"
