[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesian-beam-model-selection"
version = "0.1.0"
description = "Bayesian Model Selection for Beam Theory in Structural Health Monitoring Digital Twins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"},
    {name = "Maksim Feldmann", email = "maksim.feldman@rwth-aachen.de"}
]
maintainers = [
    {name = "Antoni Dudij", email = "antonidudij@rwth-aachen.de"}
]
keywords = [
    "digital-twins",
    "structural-health-monitoring",
    "bayesian-inference",
    "beam-theory",
    "euler-bernoulli",
    "timoshenko",
    "finite-element-method"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "pytensor>=2.18.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "h5py>=3.9.0",
    "optuna>=3.5.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",       # Parallel test execution
    "mypy>=1.5.0",
    "ruff>=0.4.0",               # Replaces black + isort + flake8 + pylint
    "pre-commit>=3.4.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",          # Dependency vulnerability scanner
    "pip-tools>=7.3.0",          # Lockfile generation via pip-compile
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
beam-model-selection = "apps.backend.cli.main:main"

[project.urls]
Homepage = "https://github.com/sheydHD/digital_twin_lab_project"
Documentation = "https://github.com/sheydHD/digital_twin_lab_project#readme"
Repository = "https://github.com/sheydHD/digital_twin_lab_project"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "configs*"]

[tool.setuptools.package-data]
"apps" = ["py.typed", "**/*.yaml"]

# =============================================================================
# Ruff — single tool for linting AND formatting (replaces black + isort + flake8)
# 10-100x faster than running black + isort + pylint separately
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting — replaces isort standalone)
    "N",   # pep8-naming
    "UP",  # pyupgrade — auto-modernize syntax (e.g. Dict→dict)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (move type-only imports to TYPE_CHECKING)
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "E741",   # ambiguous variable name (I, l, P — physics convention)
    "B008",   # do not perform function call in argument defaults
    "C901",   # too complex
    "N802",   # function name lowercase (physics: compute_M, compute_I)
    "N803",   # argument name lowercase (physics: E, I, L, P)
    "N806",   # variable in function lowercase (physics: E, I, L, P, M, etc.)
    "N816",   # mixed-case in global scope (physics constants)
    "S101",   # use of assert (fine in tests)
    "S311",   # pseudo-random generators (we use them intentionally)
    "SIM108", # ternary instead of if-else (readability in scientific code)
    "UP007",  # use X | Y for Union (keep Optional for readability in some cases)
    "RUF001", # ambiguous unicode char in string (mathematical symbols)
    "RUF002", # ambiguous unicode char in docstring (mathematical symbols)
    "RUF003", # ambiguous unicode char in comment (mathematical symbols)
    "RUF012", # mutable-class-default (dataclasses use field(default_factory=))
    "TCH",    # type-checking imports — micro-optimization, can break runtime
    "TC",     # same as TCH in newer ruff versions
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S311", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false  # gradual typing

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Allow assert statements

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=apps --cov-report=term-missing --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
